[package]
name = "zerogc"
description = "Zero overhead tracing garbage collection for rust"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
# Manually included tracing support for third party libraries
# Providing support for these important libraries,
# gives zerogc batteries included support.
indexmap = { version = "2", optional = true }
parking_lot = { version = "0.12", optional = true }
arrayvec = { version = "0.7", optional = true }
anyhow = { version = "1", optional = true }
hashbrown = { version = "0.14.5", optional = true }
# Used for macros
zerogc-derive = { path = "libs/derive", version = "0.2.0-alpha.6" }

[dev-dependencies]
serde_json = "1"
# Used to test custom hash function
# support for IndexMap
fnv = "1"

[workspace]
resolver = "2"
members = ["libs/*"]

[workspace.package]
version = "0.2.0-alpha.7"
authors = ["Techcable <git+zerogc@techcable.net>"]
repository = "https://github.com/DuckLogic/zerogc"
license = "MIT"
edition = "2021"

[features]
default = ["std"]
# Depend on the standard library (optional)
#
# This implements tracing for most standard library types.
std = ["alloc"]
# Depend on `extern crate alloc` in addition to the Rust `core`
# This is implied by using the standard library (feature="std")
#
# This implements `Trace` for `Box` and collections like `Vec`
alloc = []
# Use nightly features
nightly = ["zerogc-derive/nightly"]