[package]
name = "zerogc"
description = "Zero overhead tracing garbage collection for rust"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
# NOTE: Require an implementation of the abort that doesn't panic
#
# This can currently be done by enabling `std` or `libc`
libabort = { version = "0.1.7", default-features = false, features = ["always-immediate-abort"] }
# This provides a fallback `Allocator` API for stable rust.
allocator-api2 = { version = "0.2.18", default-features = false, features = ["alloc"] }
# Manually included tracing support for third party libraries
# Providing support for these important libraries,
# gives zerogc batteries included support.
indexmap = { version = "2", optional = true }
parking_lot = { version = "0.12", optional = true }
arrayvec = { version = "0.7", optional = true }
anyhow = { version = "1", optional = true }
hashbrown = { version = "0.14.5", optional = true }
# Used for macros
zerogc-derive = { path = "libs/derive", version = "0.2.0-alpha.6" }
# Static assertions
static_assertions = "1.1"

[dev-dependencies]
serde_json = "1"
# Used to test custom hash function
# support for IndexMap
fnv = "1"

[workspace]
resolver = "2"
members = ["libs/*"]

[workspace.package]
version = "0.2.0-alpha.7"
authors = ["Techcable <git+zerogc@techcable.net>"]
repository = "https://github.com/DuckLogic/zerogc"
license = "MIT"
edition = "2021"

[features]
default = ["std"]
# Depend on the standard library (optional)
#
# This implements tracing for most standard library types.
std = ["alloc", "allocator-api2/std", "libabort/std"]
# Implement `Trace` for types in `extern crate alloc` in addition to the Rust `core`.
# This supports types like `alloc::box::Box` and `alloc::vec::Vec`
#
# This is implied by using the standard library (feature="std")
# Regardless of the presence or absence of this feature,
# the implementation currently relies on the `alloc` crate (but this may change in the future).
alloc = []
# Enables support for thread-safe collectors.
#
# This requires the `std` feature to be enabled.
sync = []
# Use nightly features
nightly = ["zerogc-derive/nightly"]
# Use the nightly `Allocator` api
nightly-allocator = ["allocator-api2/nightly"]