[package]
name = "zerogc-derive"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
description = "Automaticatically derives code for zerogc"
repository = "https://github.com/DuckLogic/zerogc"
readme = "../README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.18", feature = ["clone-impls"] }
quote = "1.0.3"
proc-macro2 = "1.0.10"