[package]
name = "zerogc-alloc"
description = "Set of modular allocators for zerogc"
version = "0.2.0-alpha.1"
authors = ["Techcable <Techcable@techcable.net>"]
readme = "../../README.md"
license = "MIT"
edition = "2018"

[dependencies]
zerogc = { path = "../..", version = "0.2.0-alpha.1" }
# Lazy init (TODO: Replace with `std::lazy` when accepted)
once_cell = { version = "1.5.2", optional = true }
# Better locking
parking_lot = { version = "0.11", optional = true, features = ["nightly"] }
# Concurrency utils
crossbeam-utils = { version = "0.8.1", optional = true }

[features]
default = ["malloc", "sync"]
# Enable support for the system allocator
malloc = []
# Enable support for "small object" allocators
small-objects = ["once_cell"]
# Support thread-safety (for all allocators)
sync = ["parking_lot", "once_cell/parking_lot", "crossbeam-utils"]