[package]
name = "zerogc-context"
description = "Handles the context of a zerogc collector."
version = "0.2.0-alpha.1"
authors = ["Techcable <Techcable@techcable.net>"]
repository = "https://github.com/DuckLogic/zerogc"
readme = "../../README.md"
license = "MIT"
edition = "2018"

[dependencies]
zerogc = { path = "../..", version = "0.2.0-alpha.1" }
once_cell = { version = "1.5", optional = true }
# Concurrency
parking_lot = { version = "0.11", features = ["nightly"], optional = true }
crossbeam-utils = { version = "0.8", optional = true }
# Logging
slog = "2.7"

[features]
default = [
    "sync", # Support thread-safety by default
    "std"
]
# Use the standard library (required for `sync`)
std = []
# This will allow multiple threads to access the garbage collector
# by creating a seperate context for each.
#
# Thread safe collectors can have increased overhead
# by requiring communication between threads.
sync = [
    "parking_lot",
    "crossbeam-utils",
    "std"
]

