[package]
name = "zerogc-derive"
description = "Procedural derive for zerogc's garbage collection"
version = "0.2.0-alpha.2"
authors = ["Techcable <Techcable@techcable.net>"]
repository = "https://github.com/DuckLogic/zerogc"
readme = "../../README.md"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
zerogc = { version = "0.2.0-alpha.2", path = "../.." }

[dependencies]
# Proc macros
syn = { version = "1.0.55", features = ["full", "extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1"
