[package]
name = "zerogc-derive"
description = "Procedural derive for zerogc's garbage collection"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"

[lib]
proc-macro = true

[dev-dependencies]
zerogc = { version = "0.2.0-alpha.7", path = "../..", features = ["serde1"] }
serde = { version = "1" }

[dependencies]
# Proc macros
syn = { version = "1.0.55", features = ["full", "extra-traits", "visit", "fold"] }
quote = "1.0.8"
darling = "0.13"
proc-macro2 = "1"
# Utilities for argument parsing
proc-macro-kwargs = "0.1.1"
# Misc
indexmap = "1"
itertools = "0.10.1"

[features]
# Indicates that zerogc was compiled with support for serde,
__serde-internal = []
